#  Copyright Matthias Troyer 2009 - 2010.
#  Distributed under the Boost Software License, Version 1.0.
#      (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

if (MPI_FOUND)
#    add_executable(test_ngs main.cpp)
#    add_dependencies(test_ngs alps)
#    target_link_libraries(test_ngs alps)
endif(MPI_FOUND)
